# document-parser

./: .gitignore  README.md  pyproject.toml
scripts/: check_package_consistency.py
src/document_parser/: __init__.py  auto_ingest.py  comparison.py  compat_artifacts.py  config.py  consistency_cli.py  cos_publish.py  html_report.py  image_compare.py  image_compare_cli.py  image_compare_html.py  label_text_scope.py  models.py  mvp_metrics.py  ocr.py  output_contract.py  schema_artifacts.py  source_artifacts.py  standard_xlsx.py  utils.py
src/document_parser/resources/: final_result.schema.json  label_text_scope_reference_v0.1.json
tests/: test_public_cli.py
